--- a/modelo2.CSS
+++ b/modelo2.CSS
@@ -4,3 +4,14 @@ p#abc {letter-spacing: 5px;}
 /*############################# PARTE 15 - word-Spacing ########################
 p#abc {word-spacing: 5px;}
 
+/*############################# PARTE 16 - Text-Aling ########################
+p.left {text-align: left}
+p.right {text-align: right}
+p.justify {text-align: justify}
+p.center {text-align: center}
+
+/*############################# PARTE 17 - Text-Underline ########################
+p.underline {text-decoration: underline;}
+p.overline {text-decoration: overline;}
+p.line-through {text-decoration: line-through;}
+a {text-decoration: none;}
