--- a/modelo2.CSS
+++ b/modelo2.CSS
@@ -15,3 +15,8 @@ p.underline {text-decoration: underline;}
 p.overline {text-decoration: overline;}
 p.line-through {text-decoration: line-through;}
 a {text-decoration: none;}
+
+/*############################# PARTE 18 - Text-Tranform ########################
+p.primeiro-maiusculo {text-trasform: capitalize;}
+p.maiusculo {text-trasform: uppercase;}
+p.minusculo {text-traform: lowercase;}
