--- a/css/estilos.css
+++ b/css/estilos.css
@@ -33,7 +33,7 @@ pre {
 width:760px;
 margin:0 auto;
 text-align:left;
---background-color:red;
+--background-color:BLUE;
 }
 
 /*Formatação do MENU da 2ª Coluna, "Conheça o CPT.*/
