--- a/estilos.css
+++ b/estilos.css
@@ -19,7 +19,7 @@ font-size:12px;
 /*Formatação do Paragrafo, do exemplo da Linguagem jQuery.*/
 p{margin-bottom:10px;}
 pre {
-	background: #FEFFAF;
+	background: #afbeff;
 	color: #000;
 	line-height: 18px;
 	margin-bottom: 18px;
@@ -45,7 +45,7 @@ padding:20px;
 
 /*Formatação do Menu Principal, Links Internos, Home, Contato etc.*/
 #menu{
-background-color: #9b0000;
+background-color: #48009b;
 color:#FFFFFF;
 padding: 15px;
 }
@@ -96,7 +96,7 @@ clear:both;
 
 #destaque_bottom_esquerda{
 width:470px;
-background-color:#9b0000;
+background-color:#3b009b;
 padding:40px;
 float:left;
 }
