--- a/css/estilos.css
+++ b/css/estilos.css
@@ -45,7 +45,7 @@ padding:20px;
 
 /*Formatação do Menu Principal, Links Internos, Home, Contato etc.*/
 #menu{
-background-color: #9b0000;
+background-color: #1804c5;
 color:#FFFFFF;
 padding: 15px;
 }
